Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/filter.scss
+++ b/front-gateway/src/components/Search/style/filter.scss
@@ -7,23 +7,12 @@
 }
 
 .filter-toggle-container {
+  left: 100px;
   position: fixed;
+  right: 100px;
   text-align: center;
-  top: 72px;
-  width: 100%;
-  z-index: 1;
-
-  button {
-    box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.15);
-    height: 40px;
-    width: 260px;
-
-    &::after {
-      content: '\f0b0';
-      font-family: FontAwesome;
-      margin-right: 5px;
-    }
-  }
+  top: 15px;
+  z-index: 1099;
 
   @media (min-width: $screen-sm-min) {
     display: none;
@@ -32,7 +21,7 @@
 
 .filter-wrapper {
   background-color: $brand-white;
-  padding: 65px 0 0;
+  padding: 24px 0 0;
 
   @media (max-width: $screen-sm-max) {
     @include box-shadow(0 2px 10px 0 rgba(0, 0, 0, 0.2));
@@ -120,31 +109,6 @@
   font-size: 13px;
   line-height: $line-height-computed;
   padding: 24px 46px 0;
-
-  @media (max-width: $screen-xs-max) {
-    * {
-      -o-transition-property: none !important;
-      -moz-transition-property: none !important;
-      -ms-transition-property: none !important;
-      -webkit-transition-property: none !important;
-      transition-property: none !important;
-      -webkit-animation: none !important;
-      -moz-animation: none !important;
-      -o-animation: none !important;
-      -ms-animation: none !important;
-      animation: none !important;
-    }
-
-    /* Painting and performance;
-     * Browsers can paint handles in their own layer.
-     * NOT ON IPHONE THEY CAN'T.
-     */
-    .noUi-base,
-    .noUi-handle {
-      -webkit-transform: none !important;
-      transform: none !important;
-    }
-  }
 }
 
 .filter-amenities-container {
