--- a/front-gateway/src/components/Search/style/search.scss
+++ b/front-gateway/src/components/Search/style/search.scss
@@ -36,12 +36,11 @@
 
 .search-results-wrapper {
   background-color: $gray-lighter;
-  padding-top: 70px;
+  padding-top: 39px;
 
   @media (min-width: $screen-md-min) {
     bottom: 0;
     left: 0;
-    padding-top: 39px;
     position: absolute;
     right: 361px;
     top: 0;
